--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@angular/animations": "~9.1.3",
     "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.3",
-    "@angular/compiler": "~9.1.3",
+    "@angular/compiler": "^9.1.12",
     "@angular/core": "~9.1.3",
     "@angular/forms": "~9.1.3",
     "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.3",
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
+    "angular-material": "^1.2.0",
+    "firebase-admin": "^9.1.1",
     "firebase-functions": "^3.11.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
