--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@angular/platform-browser": "~9.1.3",
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
+    "@types/googlemaps": "^3.39.13",
     "angular-material": "^1.2.0",
     "firebase-admin": "^9.1.1",
     "firebase-functions": "^3.11.0",
+    "google": "^2.1.0",
+    "googlemaps": "^1.12.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
