--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~9.1.3",
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
+    "@types/google-maps": "^3.2.2",
     "@types/googlemaps": "^3.39.13",
     "angular-material": "^1.2.0",
     "firebase-admin": "^9.1.1",
