--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "@angular/router": "~9.1.3",
     "@types/google-maps": "^3.2.2",
     "@types/googlemaps": "^3.39.13",
+    "@types/overlayscrollbars": "^1.12.0",
     "angular-material": "^1.2.0",
     "firebase-admin": "^9.1.1",
     "firebase-functions": "^3.11.0",
     "google": "^2.1.0",
     "googlemaps": "^1.12.0",
+    "overlayscrollbars": "^1.13.0",
+    "overlayscrollbars-ngx": "^0.2.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
