--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.3",
     "@angular/compiler": "^9.1.12",
-    "@angular/core": "~9.1.3",
+    "@angular/core": "^9.1.12",
+    "@angular/fire": "^6.0.2",
     "@angular/forms": "~9.1.3",
     "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.3",
@@ -25,7 +26,9 @@
     "@types/googlemaps": "^3.39.13",
     "@types/overlayscrollbars": "^1.12.0",
     "angular-material": "^1.2.0",
+    "firebase": "^7.19.1",
     "firebase-admin": "^9.1.1",
+    "firebase-app": "0.0.1",
     "firebase-functions": "^3.11.0",
     "google": "^2.1.0",
     "googlemaps": "^1.12.0",
